2 text errors fixed and added line breaks for readability in mission page

--- a/front-End/src/components/MissionPage/Mission.css
+++ b/front-End/src/components/MissionPage/Mission.css
@@ -50,7 +50,7 @@ The color pallete:
     font-size: 1.2rem;
     padding: 1rem;
     border: 1px solid #948979;
-    border-radius: 8px;
+    border-radius: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /* transition: box-shadow 0.3s ease, transform 0.3s ease; */
 }
@@ -68,7 +68,13 @@ The color pallete:
   .mission-text {
     margin: 0;
     color: #eadcc6;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    padding: 1rem;
+    border-radius: 2rem;
+    background-color: #355265;
 }
+
+
   
  
 
